added history panel to basic panel and several other additions